--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "book-service-web",
-  "version": "0.1.0",
-  "private": true,
+  "name": "mdb-react-admin-template",
+  "version": "1.0.0",
+  "description": "MDB - React Admin Dashboard Free",
+  "author": "MDBootstrap <support@mdbootstrap.com>",
+  "license": "MIT",
   "dependencies": {
-    "firebase": "^5.8.6",
-    "react": "^16.8.4",
-    "react-bootstrap": "^1.0.0-beta.5",
-    "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8",
-    "react-social-icons": "^4.1.0"
+    "firebase": "^5.9.0",
+    "google-map-react": "^1.0.6",
+    "mdbreact": "^4.9.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
